# epgt-v1

./: .gitignore  README.md  pyproject.toml
configs/data/: base_common_delay.yaml  e0_oracle_clean.yaml  e1_clean_transformer.yaml  e2_effective_paths.yaml  e3_awgn.yaml  e4_symbol_error.yaml  e5_full_stress.yaml  e6_h_loss_l5.yaml
configs/model/: direct_h_baseline.yaml  hybrid_transformer.yaml
configs/physics/: README.md  base_ofdm_priors.yaml  delay_doppler_bias.yaml  impairment_constraints.yaml  pilot_reliability_mask.yaml
docs/: architecture_snapshots.md  data_to_token_diagram.md  e2_training_scenarios.md  e3_e5_pipeline_notes.md  ls_plugin_notes.md  model_variants_diagrams.md  query_reconstruction_notes.md  training_tuning_notes.md  visual_overview.md
docs/pgt/: epgt_complete_report.md  epgt_v1_architecture_diagram.md  folder_plan.md  project_architecture.md
experiments/: README.md
experiments/e0_oracle_clean/: metrics.json
experiments/e1_clean_transformer/: comparison_metrics.json  direct_h_metrics.json  hybrid_metrics.json  stable_comparison_metrics.json  stable_linear_comparison_metrics.json  stable_scaled_comparison_metrics.json  (+4 more)
openspec/: config.yaml
scripts/: README.md  plot_results.py  run_e3_e5_pipeline.py  run_l_eff_sweep.py  run_ls_plugin_comparison.py  run_oracle_ls.py  run_snr_sweep.py  run_two_stage_reconstruction_sweep.py  train_direct_h.py
tests/: test_data_pipeline.py  test_experiment_pipeline.py  test_ls_plugins.py  test_models.py  test_oracle_ls.py  test_pgt_config.py  test_pgt_model_shapes.py  test_physics_priors.py
(+250 files in other folders)
